--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "uneeb agha",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "mongodb": "^3.1.6"
   }
