--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.4",
+    "eth-sig-util": "^2.1.0",
     "express": "^4.16.3",
     "mongodb": "^3.1.6"
   }
